--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@ducanh2912/next-pwa": "^10.0.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@use-gesture/react": "^10.3.1",
     "glsl-random": "^0.0.5",
+    "leva": "^0.9.35",
     "next": "^14.0.4",
+    "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "three": "^0.160.0",
+    "three-globe": "^2.31.0",
     "three-stdlib": "^2.28.9",
     "tunnel-rat": "^0.1.2"
   },
