--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "R3F Next Starter",
-  "short_name": "R3F Next Starter",
+  "name": "What's the Weather",
+  "short_name": "WTW",
   "icons": [
     {
       "src": "/icons/apple-touch-icon.png",
