--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@use-gesture/react": "^10.3.1",
+    "axios": "^1.6.8",
     "glsl-random": "^0.0.5",
     "leva": "^0.9.35",
     "next": "^14.0.4",
