--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.8",
     "glsl-random": "^0.0.5",
     "leva": "^0.9.35",
+    "maath": "^0.10.7",
     "next": "^14.0.4",
     "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
