--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.0",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.8",
     "glsl-random": "^0.0.5",
-    "leva": "^0.9.35",
     "maath": "^0.10.7",
     "next": "^14.0.4",
     "r3f-perf": "^7.2.1",
