--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-responsive": "^10.0.0",
     "three": "^0.160.0",
     "three-globe": "^2.31.0",
     "three-stdlib": "^2.28.9",
