--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@use-gesture/react": "^10.3.1",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.8",
     "maath": "^0.10.7",
     "next": "^14.0.4",
